--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 
   <head>
+    
     <meta charset="utf-8">
   <link rel="dns-prefetch" href="https://github.githubassets.com">
   <link rel="dns-prefetch" href="https://avatars.githubusercontent.com">
@@ -205,7 +206,7 @@
   <meta name="msapplication-TileColor" content="#ffffff">
 
   <link rel="manifest" href="/manifest.json" crossOrigin="use-credentials">
-
+<meta name="google-site-verification" content="OtFP5x618LOEoTxQy0Q_7CS0a5BnMvsMHzf0yhjoTO4" />
   </head>
 
   <body class="logged-in env-production page-responsive" style="word-wrap: break-word;">
