--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
   <head>
-    
+    <meta name="google-site-verification" content="OtFP5x618LOEoTxQy0Q_7CS0a5BnMvsMHzf0yhjoTO4" />
     <meta charset="utf-8">
   <link rel="dns-prefetch" href="https://github.githubassets.com">
   <link rel="dns-prefetch" href="https://avatars.githubusercontent.com">
@@ -110,7 +110,7 @@
   <meta name="route-pattern" content="/:user_id/:repository" data-turbo-transient>
   <meta name="route-controller" content="files" data-turbo-transient>
   <meta name="route-action" content="disambiguate" data-turbo-transient>
-
+<meta name="google-site-verification" content="OtFP5x618LOEoTxQy0Q_7CS0a5BnMvsMHzf0yhjoTO4" />
     
   <meta name="current-catalog-service-hash" content="82c569b93da5c18ed649ebd4c2c79437db4611a6a1373e805a3cb001c64130b7">
 
